HBASE-8855  TestTableInputFormatScan1/2 fail semi-silently with the hadoop 2 profile
git-svn-id: https://svn.apache.org/repos/asf/hbase/trunk@1504730 13f79535-47bb-0310-9956-ffa450edef68